# team-intelligence-v04

./: .gitignore  CHANGELOG.md  DECISIONS.md  PROJECT_LOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
examples/minimal/: messages.html
scripts/: generate_examples.py
src/reports/: authors.csv  daily_metrics.csv  report.txt  team_intelligence.xlsx
src/team_intelligence/: __main__.py
src/team_intelligence/analytics/: activity_analyzer.py  attachment_analyzer.py  communication_analyzer.py  content_analyzer.py  link_analyzer.py  mention_analyzer.py  statistics_analyzer.py
src/team_intelligence/daily/: item_extractor.py  missed_report_analyzer.py  models.py  quality_analyzer.py  report_builder.py  sections_parser.py  structured_report_parser.py  text_normalizer.py
src/team_intelligence/parser/: models.py  telegram_parser.py
src/team_intelligence/reports/: console_report.py  excel_exporter.py  exporter.py  pdf_exporter.py
