[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "team-intelligence"
version = "0.4.0"
description = "Daily report analytics based on Telegram HTML exports"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "pymorphy3>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
